# DEPRECEATED-torch7-distro

./: CMakeLists.txt  COPYRIGHT.txt  README.md  README.txt  torch-7.0-0.rockspec  torch-7.0-1.rockspec  torch-7.0.1-0.rockspec
cuda/: CMakeLists.txt
cuda/lib/THC/: CMakeLists.txt  THC.cu  THC.h  THCGeneral.c  THCGeneral.h  THCStorage.c  THCStorage.cu  THCStorage.h  THCTensor.c  THCTensor.cu  THCTensor.h  THCTensorConv.cu  THCTensorConv.h  THCTensorCopy.cu  THCTensorMath.cu  THCTensorMath.h
cuda/pkg/: CMakeLists.txt
cuda/pkg/cunn/: CMakeLists.txt  HardTanh.cu  LogSoftMax.cu  MSECriterion.cu  MultiMarginCriterion.cu  SpatialConvolution.cu  SpatialSubSampling.cu  Tanh.cu  TemporalConvolution.cu  TemporalLogSoftMax.cu  init.cu  init.lua
cuda/pkg/cunn/test/: test.lua
cuda/pkg/cutorch/: CMakeLists.txt  Storage.c  Tensor.c  Tensor.lua  TensorMath.c  init.c  init.lua
exe/: CMakeLists.txt
exe/lua/: CMakeLists.txt
exe/lua-5.1.3/: CMakeLists.txt
exe/lua-5.1.3/src/: CMakeLists.txt  LuaConfig.cmake.in  lapi.h  lauxlib.c  lcode.h  ldblib.c  ldo.c  liolib.c  llex.h  lmem.c  loslib.c  lparser.c  lstate.c  lstrlib.c  lua.c  print.c
exe/lua/src/: lauxlib.h  lbaselib.c  llex.c  lmathlib.c  lparser.h  lstring.h  ltable.h  lua.c  luac.c  luaconf.h.in  lualib.h  lundump.c
exe/luajit/: CMakeLists.txt
exe/luajit-2.0/: CMakeLists.txt  Makefile
exe/luajit-2.0/src/: Makefile  luaconf.h.in  luajit.c
exe/luajit/src/: luaconf.h.in  luajit.c
exe/luarocks/: CMakeLists.txt  Makefile  torch-7.scm-0.rockspec
exe/luarocks-2.0.7.1/: CMakeLists.txt
exe/luarocks-2.0.7.1/cmake/: LuaRocksInitPaths.cmake  LuaRocksPaths.cmake  config.lua.in  site_config.lua.in
exe/luarocks/src/luarocks/: cfg.lua  config.lua.in  site_config.lua.in
exe/luarocks/src/luarocks/fs/: lua.lua
exe/qtlua/: CMakeLists.txt
exe/qtlua/cmake/: FindLua.cmake  InstallRequiredQtLibraries.cmake  MacroAddQtLuaModule.cmake  QtLuaPaths.cmake
exe/qtlua/qlua/: CMakeLists.txt  QLuaConfig.cmake.in  qlua.cpp  qlua.qrc  qlua.rc  qluaapplication.cpp  qluaapplication.h  qluaconf.h.in  qluaconsole.h  qluaconsole_unix.cpp  qluaconsole_win.cpp
exe/qtlua/qlua/images/: luadoc.icns
exe/qtlua/qtlua/: CMakeLists.txt  QtLuaConfig.cmake.in  qtluaengine.cpp  qtluaengine.h  qtluautils.cpp
exe/qtlua/qtutil/: CMakeLists.txt  Readme.txt  qmenuaction.cpp  qmenuaction.h  qthumbwheel.cpp  qtutilconf.h
exe/torch-exe/: CMakeLists.txt  torch-env.lua  torch-exe.lua
exe/torch-pkg/: CMakeLists.txt  packages.th7  torch-pkg.in  torch-pkg.lua.in
extra/cuda/: CMakeLists.txt
extra/cuda/cmake/FindCUDA/: make2cmake.cmake
extra/cuda/pkg/: CMakeLists.txt
extra/cuda/pkg/cunn/: Abs.cu  AbsCriterion.cu  CMakeLists.txt  HardTanh.cu  LogSoftMax.cu  MSECriterion.cu  Max.cu  MultiMarginCriterion.cu  Sigmoid.cu  SpatialConvolution.cu  SpatialConvolutionCUDA.cu  SpatialConvolutionMap.cu  SpatialMaxPooling.cu  SpatialMaxPoolingCUDA.cu  SpatialSubSampling.cu  Sqrt.cu  Square.cu  Tanh.cu  TemporalConvolution.cu  Threshold.cu  init.cu
extra/cuda/pkg/cunn/SpatialConvolutionCUDA/: accGradParameters.cu  updateGradInput.cu  updateOutput.cu
extra/cuda/pkg/cunn/SpatialPoolingCUDA/: updateGradInput.cu  updateOutput.cu
extra/cuda/pkg/cunn/test/: test.lua
extra/cuda/pkg/cutorch/: CMakeLists.txt
extra/openmp/: CMakeLists.txt
extra/openmp/lib/: CMakeLists.txt
extra/openmp/lib/THOmp/: CMakeLists.txt  THOmpTensorConv.c
extra/openmp/lib/THOmp/generic/: THOmpTensorConv.c
extra/openmp/pkg/: CMakeLists.txt
extra/openmp/pkg/openmp/: CMakeLists.txt  init.c  openmp.c  torchOmp.c
libraries/TH/: CMakeLists.txt  TH.h  THBlas.c  THDiskFile.c  THFile.c  THFile.h  THFilePrivate.h  THGeneral.h  THGenerateAllTypes.h  THGenerateFloatTypes.h  THLab.c  THLab.h  THMemoryFile.c  THStorage.c  THStorage.h  THStorageGen.c  THStorageGen.h  THTensor.c  THTensor.h  THTensorApply.h  THTensorGen.c  THTensorGen.h  THTensorMath.c  THTensorMath.h  THTensorRandom.c  THTensorRandom.h  THVector.c  THVector.h
libraries/TH/cmake/: FindLAPACK.cmake
libraries/TH/generic/: THBlas.c  THLab.c  THLab.h  THLabConv.c  THLabConv.h  THLabLapack.c  THLabLapack.h  THLapack.c  THLapack.h  THStorage.c  THStorage.h  THTensor.c  THTensor.h  THTensorConv.c  THTensorConv.h  THTensorLapack.c  THTensorLapack.h  THTensorMath.c  THTensorMath.h  THVector.c  THVector.h
openmp/: CMakeLists.txt
openmp/lib/THOmp/: CMakeLists.txt  THOmpLab.h  THOmpLabConv.c  THOmpLabConv.h  THOmpTensorConv.h
openmp/lib/THOmp/generic/: THOmpLab.c  THOmpLab.h  THOmpLabConv.c  THOmpLabConv.h  THOmpTensorConv.c  THOmpTensorConv.h
openmp/pkg/: CMakeLists.txt
openmp/pkg/openmp/: CMakeLists.txt  SpatialConvolutionOmp.c  init.c  init.lua  labOmp.c  nnOmp.c  openmp.c  torchOmp.c
openmp/pkg/openmp/generic/: HardTanhOmp.c  SpatialConvolutionMapOmp.c  SpatialConvolutionOmp.c  SpatialMaxPoolingOmp.c  SpatialSubSamplingOmp.c  SqrtOmp.c  SquareOmp.c  TanhOmp.c  labOmp.c  torchOmp.c
openmp/pkg/openmp/test/: test.lua
pkg/: CMakeLists.txt
pkg/dok/: init.lua  inline.lua  search.lua
pkg/dok/dokinstall/: blas.dok  index.dok
pkg/dok/doktutorial/: index.dok
pkg/gnuplot/: CMakeLists.txt  gnuplot.lua  hist.lua  init.lua
pkg/gnuplot/dok/: index.dok
pkg/lab/: CMakeLists.txt  init.lua
pkg/paths/: CMakeLists.txt  init.lua.in  paths.c  paths.h.in
pkg/paths/dok/: index.dok
pkg/random/: CMakeLists.txt  init.lua
pkg/torch/: CMakeLists.txt  Storage.lua  StorageCopy.lua  Tensor.lua  TensorMath.lua  init.c  init.lua  print.lua  utils.c
pkg/torch/dok/: maths.dok
pkg/torch/generic/: Tensor.c
pkg/torch/test/: fft.lua  fftdim.lua
pkg/wrap/: CMakeLists.txt  init.lua  types.lua
pkg/wrap/dok/: index.dok
qtlua/: CMakeLists.txt
qtlua/cmake/: InstallRequiredQtLibraries.cmake  MacroAddQtLuaModule.cmake  MacroQt4AutoGen.cmake
qtlua/qlua/: CMakeLists.txt  qlua.cpp  qlua.plist.in  qluaapplication.cpp  qluaconsole_unix.cpp  qluaconsole_win.cpp
qtlua/qlua/images/: torch.icns
qtlua/qtlua/: qtluaconf.h.in  qtluaengine.cpp  qtluaengine.h  qtluautils.cpp  qtluautils.h
qtlua/qtutil/: QtUtilConfig.cmake.in  qthumbwheel.h
(+78 files in other folders)
