#SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

SET(Lua_INSTALL_BIN_SUBDIR "${Torch_INSTALL_BIN_SUBDIR}")
SET(Lua_INSTALL_LIB_SUBDIR "${Torch_INSTALL_LIB_SUBDIR}")
SET(Lua_INSTALL_INCLUDE_SUBDIR "${Torch_INSTALL_INCLUDE_SUBDIR}")
SET(Lua_INSTALL_LUA_PATH_SUBDIR "${Torch_INSTALL_LUA_PATH_SUBDIR}")
SET(Lua_INSTALL_LUA_CPATH_SUBDIR "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
SET(Lua_INSTALL_BIN_RIDBUS "${Torch_INSTALL_BIN_RIDBUS}")
SET(Lua_INSTALL_FINDLUA_DIR "${Torch_BINARY_DIR}/cmake")

#ADD_SUBDIRECTORY(lua-5.1.3)
ADD_SUBDIRECTORY(luajit-2.0)
ADD_SUBDIRECTORY(qtlua)

SET_TARGET_PROPERTIES(lua PROPERTIES OUTPUT_NAME "torch-lua")
SET_TARGET_PROPERTIES(lua-static PROPERTIES OUTPUT_NAME "torch-lua-static")
GET_TARGET_PROPERTY(luac OUTPUT_NAME LUAC_EXISTS)
IF(LUAC_EXISTS)
  SET_TARGET_PROPERTIES(luac PROPERTIES OUTPUT_NAME "torch-luac")
ENDIF(LUAC_EXISTS)
SET_TARGET_PROPERTIES(liblua-static PROPERTIES OUTPUT_NAME "torch-lua-static")
SET_TARGET_PROPERTIES(liblua-shared PROPERTIES OUTPUT_NAME "torch-lua")

IF(WITH_QTLUA)
  SET_TARGET_PROPERTIES(qlua PROPERTIES OUTPUT_NAME "torch-qlua")
ENDIF(WITH_QTLUA)
