# We compile our own custom Lua
SET(Lua_IS_SUBPROJECT ON)
SET(Lua_INSTALL_BIN_SUBDIR "${Torch_INSTALL_BIN_SUBDIR}")
SET(Lua_INSTALL_LIB_SUBDIR "${Torch_INSTALL_LIB_SUBDIR}")
SET(Lua_INSTALL_INCLUDE_SUBDIR "${Torch_INSTALL_INCLUDE_SUBDIR}")
SET(Lua_INSTALL_LUA_PATH_SUBDIR "${Torch_INSTALL_LUA_PATH_SUBDIR}")
SET(Lua_INSTALL_LUA_CPATH_SUBDIR "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
SET(Lua_INSTALL_BIN_RIDBUS "${Torch_INSTALL_BIN_RIDBUS}")
SET(Lua_INSTALL_FINDLUA_DIR "${Torch_BINARY_DIR}/cmake")

SET(LUA_JIT ON CACHE BOOL "Use LuaJIT instead of Lua")
IF(LUA_JIT)
  ADD_SUBDIRECTORY(luajit-2.0)
ELSE(LUA_JIT)
  ADD_SUBDIRECTORY(lua-5.1.3)
ENDIF(LUA_JIT)

SET_TARGET_PROPERTIES(lua PROPERTIES OUTPUT_NAME "torch-lua")
SET_TARGET_PROPERTIES(lua-static PROPERTIES OUTPUT_NAME "torch-lua-static")
GET_TARGET_PROPERTY(luac OUTPUT_NAME LUAC_EXISTS)
IF(LUAC_EXISTS)
  SET_TARGET_PROPERTIES(luac PROPERTIES OUTPUT_NAME "torch-luac")
ENDIF(LUAC_EXISTS)
SET_TARGET_PROPERTIES(liblua-static PROPERTIES OUTPUT_NAME "torch-lua-static")
SET_TARGET_PROPERTIES(liblua-shared PROPERTIES OUTPUT_NAME "torch-lua")

# We compile our own custom QtLua
SET(QtLua_IS_SUBPROJECT ON)
SET(QtLua_INSTALL_PREFIX "${Torch_INSTALL_PREFIX}")
SET(QtLua_INSTALL_BIN_SUBDIR "${Torch_INSTALL_BIN_SUBDIR}")
SET(QtLua_INSTALL_LIB_SUBDIR "${Torch_INSTALL_LIB_SUBDIR}")
SET(QtLua_INSTALL_INCLUDE_SUBDIR "${Torch_INSTALL_INCLUDE_SUBDIR}")
SET(QtLua_INSTALL_LUA_PATH_SUBDIR "${Torch_INSTALL_LUA_PATH_SUBDIR}")
SET(QtLua_INSTALL_LUA_CPATH_SUBDIR "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
SET(QtLua_INSTALL_CMAKE_SUBDIR "${Torch_INSTALL_CMAKE_SUBDIR}")
SET(QtLua_INSTALL_BIN_RIDBUS "${Torch_INSTALL_BIN_RIDBUS}")
SET(QtLua_INSTALL_FINDLUA_DIR "${Torch_BINARY_DIR}/cmake")

ADD_SUBDIRECTORY(qtlua)
IF(WITH_QTLUA)
  SET_TARGET_PROPERTIES(qlua PROPERTIES OUTPUT_NAME "torch-qlua")
  GET_TARGET_PROPERTY(macqlua OUTPUT_NAME MACQLUA_EXISTS)
  IF(MACQLUA_EXISTS)
    SET_TARGET_PROPERTIES(macqlua PROPERTIES OUTPUT_NAME "torch-macqlua")
  ENDIF(MACQLUA_EXISTS)
ENDIF(WITH_QTLUA)

# Our package manager
ADD_SUBDIRECTORY(torch-pkg)
